wip: added environment, some tryout with laser controller

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typescript": "^3.9.3"
   },
   "dependencies": {
+    "aframe-environment-component": "^2.0.0",
     "aframe-teleport-controls": "^0.3.1",
     "sirv-cli": "^1.0.0"
   }
