--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@tsconfig/svelte": "^1.0.0",
     "@types/aframe": "^1.0.2",
     "aframe": "^1.1.0",
+    "eslint": "^7.18.0",
+    "eslint-plugin-svelte3": "^3.0.0",
+    "prettier": "^2.2.1",
+    "prettier-plugin-svelte": "^2.1.1",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
