--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "typescript": "^3.9.3"
   },
   "dependencies": {
+    "@types/chess.js": "^0.10.1",
     "aframe-environment-component": "^2.0.0",
+    "chess.js": "^0.11.0",
     "sirv-cli": "^1.0.0"
   }
 }
